--- a/ClassLibraryDAO/ClassLibraryDAO.csproj
+++ b/ClassLibraryDAO/ClassLibraryDAO.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibraryModels\ClassLibraryModels\ClassLibrarymodels.csproj" />
+    <ProjectReference Include="..\ClassLibraryModels\ClassLibraryModels\ClassLibraryModels.csproj" />
   </ItemGroup>
 
 </Project>
